--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.91.0",
-    "mammoth": "^1.11.0",
-    "next": "16.1.4",
-    "pdf-parse": "^2.4.5",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "xlsx": "^0.18.5"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/ssr": "^0.1.0",
+    "lucide-react": "^0.330.0",
+    "xlsx": "^0.18.5",
+    "mammoth": "^1.6.0",
+    "pdf-parse": "^1.1.1",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
